Issue #73: Fix checkstyle warnings from new checks
* Fix use of constructor with Double
* Fix repetition of string literals
* Fix reassignment of parameters